[package]
name = "truce-cpu"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CPU rendering backend (tiny-skia + skrifa) for truce plugins"

[dependencies]
truce-core = { workspace = true }
truce-font = { workspace = true, features = ["raster"] }
truce-gui-types = { workspace = true }
tiny-skia = "0.12"

[lints]
workspace = true
