[package]
name = "truce-dsp"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Realtime-safe DSP utilities for truce plugins (ring buffers, lock-free taps, …)"

[dependencies]

[lints]
workspace = true
