[package]
name = "truce-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "egui-based GUI backend for truce audio plugins"

[dependencies]
truce-core = { workspace = true }
truce-gui = { workspace = true }
truce-params = { workspace = true }
egui = "0.31"
egui-wgpu = "0.31"
wgpu = "24"
pollster = "0.4"
baseview = { workspace = true }
raw-window-handle = "0.5"
keyboard-types = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints]
workspace = true
