[package]
name = "truce-font"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
# Plain Apache 2.0 - this crate is a tiny font-loading wrapper plus
# the bundled JetBrains Mono asset; no Framework License carve-out
# applies. The bundled `JetBrainsMono-Regular.ttf` asset is governed
# separately by the SIL Open Font License 1.1, included alongside
# the font as `fonts/OFL.txt` per the OFL's distribution terms.
license = "Apache-2.0"
rust-version.workspace = true
description = "Bundled fonts for the truce audio plugin framework. JetBrains Mono is bundled under the SIL Open Font License 1.1."

# The font binary is the whole point of this crate; ship it.
include = [
    "src/**",
    "fonts/JetBrainsMono-Regular.ttf",
    "fonts/OFL.txt",
    "README.md",
]

[lints]
workspace = true
