[package]
name = "truce-font"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
# Plain Apache 2.0 - this crate is a small font crate (bundled bytes plus
# an optional glyph rasterizer); no Framework License carve-out
# applies. The bundled `JetBrainsMono-Regular.ttf` asset is governed
# separately by the SIL Open Font License 1.1, included alongside
# the font as `fonts/OFL.txt` per the OFL's distribution terms.
license = "Apache-2.0"
rust-version.workspace = true
description = "Bundled fonts for the truce audio plugin framework. JetBrains Mono is bundled under the SIL Open Font License 1.1."

# The font binary is the whole point of this crate; ship it.
include = [
    "src/**",
    "fonts/JetBrainsMono-Regular.ttf",
    "fonts/OFL.txt",
    "README.md",
]

[lints]
workspace = true

[features]
# Glyph rasterization over the bundled font (skrifa outlines filled
# with tiny-skia). Enabled by the CPU / GPU render backends; consumers
# that only want the font bytes (egui / iced / slint) leave it off.
raster = ["dep:skrifa", "dep:tiny-skia"]

[dependencies]
skrifa = { version = "0.43", optional = true }
tiny-skia = { version = "0.12", optional = true }
