[package]
name = "truce-gpu"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GPU rendering backend (wgpu) for truce plugins"

[dependencies]
truce-core = { workspace = true }
truce-gui = { workspace = true }
truce-params = { workspace = true }
wgpu = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
lyon_tessellation = "1"
fontdue = "0.9"
raw-window-handle = "0.5"

# baseview is the macOS/Windows/Linux windowing layer; iOS embeds
# wgpu surfaces directly in a UIView attached to the AUv3 view
# controller (see `truce-gui::editor_ios`), so the baseview-bound
# editor here is gated off the iOS build.
[target.'cfg(not(target_os = "ios"))'.dependencies]
baseview = { workspace = true }

[features]
default = []
hot-debug = []

[lints]
workspace = true
