[package]
name = "truce-gpu"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "GPU rendering backend (wgpu) for truce plugins"

[dependencies]
truce-core = { workspace = true }
truce-gui = { workspace = true }
truce-params = { workspace = true }
wgpu = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
lyon_tessellation = "1"
fontdue = "0.9"
raw-window-handle = "0.5"

# baseview is the macOS/Windows/Linux windowing layer; iOS embeds
# wgpu surfaces directly in a UIView attached to the AUv3 view
# controller (see `truce-gui::editor_ios`), so the baseview-bound
# editor here is gated off the iOS build.
[target.'cfg(not(target_os = "ios"))'.dependencies]
baseview = { workspace = true }

# wgpu backend features, gated per OS so the macOS / Windows builds
# don't drag in the Linux Vulkan + GLES stacks (and vice versa).
# Cargo unifies the feature set across the dep graph, so enabling
# them here once is enough - downstream wgpu users (truce-gui,
# truce-egui, truce-slint, etc.) all see the right backend.
[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(target_os = "ios")'.dependencies]
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { workspace = true, features = ["vulkan", "gles"] }

[features]
default = []
hot-debug = []

[lints]
workspace = true
