[package]
name = "truce-gui-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lightweight GUI types for truce — layout, render trait, widget regions. No rasterization, no windowing."

[dependencies]
truce-core = { workspace = true }

[lints]
workspace = true
