[package]
name = "truce-gui-utils"
description = "Cross-backend host-side helpers for truce GUI backends (macOS NSView anchoring, etc)."
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# `RawWindowHandle` appears in the public function signature on every
# platform (the non-macOS stub is a no-op but still takes the type),
# so this dep stays unconditional. `objc` is only needed for the
# macOS impl, so it's behind a target gate below.
raw-window-handle = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# For the WGL hardware-OpenGL probe (see `wgl_extensions_available`).
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
