[package]
name = "truce-gui"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Built-in GUI for truce plugins"

[dependencies]
truce-core = { workspace = true }
# `truce-cpu` (tiny-skia + fontdue) and `truce-gpu` (wgpu) are the
# two `RenderBackend` impls. Both optional, gated by the `cpu`
# (default) / `gpu` features so plugins that opt into one don't
# pull the other's compile.
truce-cpu = { workspace = true, optional = true }
truce-gpu = { workspace = true, optional = true }
truce-gui-types = { workspace = true }
truce-gui-utils = { workspace = true }
truce-params = { workspace = true }
truce-plugin = { workspace = true }
raw-window-handle = "0.5"
wgpu = { workspace = true }
pollster = "0.4"
log = "0.4"

# baseview hosts the editor on macOS / Windows / Linux. iOS embeds
# a UIView directly into the AUv3 view controller - no baseview.
[target.'cfg(not(target_os = "ios"))'.dependencies]
baseview = { workspace = true }

# wgpu backend features, per OS. truce-gui's blit pipeline (cpu
# mode) and `GpuEditor` (gpu mode) both need a usable wgpu backend
# regardless of which feature is on. truce-gpu used to provide
# these transitively; now that truce-gpu is optional, truce-gui
# declares them itself so wgpu always has a backend available.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { workspace = true, features = ["vulkan", "gles"] }

# iOS UIKit + CoreGraphics bridging for the UIView host.
[target.'cfg(target_os = "ios")'.dependencies]
# iOS always rasterizes with the CPU backend (tiny-skia → CGImage →
# UIView layer contents); the `gpu` wgpu path is desktop-only. So
# truce-cpu is a hard dependency here regardless of the `cpu` / `gpu`
# features a plugin picks — a gpu-only iOS build (e.g. an example that
# sets `features = ["gpu"]`) still needs the CPU rasterizer.
truce-cpu = { workspace = true }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
objc2-ui-kit = { version = "0.3", features = ["UIView", "UIScreen", "UIWindow"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMetalLayer"] }

[features]
# `cpu` is the default - tiny-skia software rasterizer with a wgpu
# blit pipeline for surface presentation. `gpu` swaps in direct wgpu
# rendering through `truce_gpu::WgpuBackend`; opting in via
# `default-features = false, features = ["gpu"]` keeps truce-cpu
# (and tiny-skia + fontdue) out of the dep tree.
default = ["cpu"]
# Both features need truce-gpu: `gpu` for `WgpuBackend`, `cpu` for the
# surface pump (`truce_gpu::pump`) its blit presentation runs through.
cpu = ["dep:truce-cpu", "dep:truce-gpu"]
gpu = ["dep:truce-gpu"]

[lints]
workspace = true

