[package]
name = "truce-iced"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Iced GUI backend for truce plugins"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
truce-gui = { workspace = true }

log = "0.4"
iced = { version = "0.13", default-features = false, features = ["canvas", "wgpu"] }
iced_runtime = "0.13"
iced_graphics = "0.13"
raw-window-handle = "0.5"

# baseview + iced_wgpu live behind these on non-iOS hosts. iOS uses
# the stub editor in `editor_ios.rs`; iced-wgpu surface creation on
# iOS needs the same CAMetalLayer plumbing the slint/egui backends
# also defer. Plugin code stays portable through `IcedEditor`.
[target.'cfg(not(target_os = "ios"))'.dependencies]
iced_wgpu = { workspace = true }
pollster = "0.4"
baseview = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }

[lints]
workspace = true
