[package]
name = "truce-iced"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Iced GUI backend for truce plugins"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
truce-gui = { workspace = true }

log = "0.4"
iced = { version = "0.14", default-features = false, features = ["canvas", "wgpu", "thread-pool"] }
iced_runtime = "0.14"
iced_graphics = "0.14"
raw-window-handle = "0.5"
# `ttf-parser` reads the TTF `name` table so `with_font(bytes)` can
# extract the family name iced needs to refer to the font afterward,
# matching the egui / vizia `with_font(bytes)` shape. Pinned to the
# same major iced's cosmic-text uses transitively to share one copy.
ttf-parser = "0.25"

# baseview + iced_wgpu live behind these on non-iOS hosts. iOS uses
# the stub editor in `editor_ios.rs`; iced-wgpu surface creation on
# iOS needs the same CAMetalLayer plumbing the slint/egui backends
# also defer. Plugin code stays portable through `IcedEditor`.
[target.'cfg(not(target_os = "ios"))'.dependencies]
iced_wgpu = "0.14"
pollster = "0.4"
baseview = { workspace = true }
# Translate baseview key events into iced keyboard events. Pinned to the
# same major baseview emits so the `KeyboardEvent` types unify.
keyboard-types = "0.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }

[target.'cfg(target_os = "linux")'.dependencies]
iced = { version = "0.14", default-features = false, features = ["x11", "wayland"] }

[lints]
workspace = true
