[package]
name = "truce-loader-tests"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration tests for truce-loader. Lives in its own crate so the test deps (umbrella `truce` + `truce-derive`) can be normal deps without forming a `truce <-> truce-loader` cycle in cargo metadata."
# Internal-only — never published. The `release.sh` filter excludes
# `publish = false` crates from the workspace publish set.
publish = false

[dependencies]

[dev-dependencies]
truce = { workspace = true }
truce-core = { workspace = true }
truce-derive = { workspace = true }
truce-gui = { workspace = true }
truce-loader = { workspace = true }
truce-params = { workspace = true }
# Shared params / state / logic for the reload-transition fixtures. A
# dev-dep (not a build-graph edge to the cdylibs, which expose no rlib)
# so the test can build `FxParams` for the shared params pointer.
reload-fixture-common = { path = "fixtures/reload-fixture-common" }

[features]
# Mirror `truce-loader`'s `shell` feature so `#[cfg(feature = "shell")]`
# gates inside the integration tests stay consistent with the gates
# in `truce-loader` itself. The dylib-loading tests (`loader_test`,
# `graceful_degradation`) opt in by enabling this feature.
shell = ["truce-loader/shell"]

[lints]
workspace = true
