[package]
name = "truce-loader"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
description = "Hot-reloadable plugin logic for truce (native ABI, dylib loading)"

[dependencies]
log = "0.4"
# Already in the workspace dep graph via image / png; pulled as a
# direct dep so the file-fingerprint path uses the SIMD-accelerated
# implementation (~30× faster than a hand-rolled table-free CRC32).
crc32fast = "1.5"
truce-core = { workspace = true }
truce-gui = { workspace = true }
truce-params = { workspace = true }
truce-gpu = { workspace = true }

[dependencies.libloading]
version = "0.9"
optional = true

[dependencies.parking_lot]
version = "0.12"
optional = true

[dev-dependencies]
truce = { workspace = true }
truce-derive = { workspace = true }

[features]
default = []
shell = ["dep:libloading", "dep:parking_lot"]
hot-debug = ["truce-gpu/hot-debug"]

[lints]
workspace = true
