[package]
name = "truce-lv2"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LV2 format wrapper for truce"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
truce-build = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints]
workspace = true
