[package]
name = "truce-lv2"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LV2 format wrapper for truce"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
truce-build = { workspace = true }
# Preset TTLs store the state envelope as an `xsd:base64Binary`
# literal; lilv-based hosts decode it to a raw `atom:Chunk` before
# calling `restore()`, but REAPER hands the base64 text back verbatim,
# so `restore()` decodes it itself (see `state::restore_cb`).
base64 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# X11 size fix-ups for the embedded UI under hosts that don't honour
# `ui:resize` (REAPER): pin a non-resizable editor's parent + child to
# the editor's natural size so the host can't stretch the surface.
# `x11-dl` is dlopen-based, so no link-time X11 dependency.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11-dl = "2"

[lints]
workspace = true
