[package]
name = "truce-params-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Derive macro for truce parameter structs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
