[package]
name = "truce-params"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parameter system for the truce framework"

[dependencies]
bitflags = "2"

[lints]
workspace = true
