[package]
name = "truce-plugin"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "User-facing PluginLogic traits for truce - the plugin author's entry point."

[dependencies]
truce-core = { workspace = true }
truce-gui-types = { workspace = true }
truce-params = { workspace = true }

[lints]
workspace = true
